# rustos

./: .gdbinit  Cargo.toml  README.md
src/: arch.rs  cooperative.rs  heap.rs  lib.rs  linked_list_allocator.rs  main.rs  serial.rs  slab.rs  stack.rs  sync.rs  test.rs  test_suite.rs  vga_buffer.rs
src/arch/: x86.rs
src/arch/x86/: allocator.rs  gdt.rs  heap.rs  interrupts.rs  memory.rs
src/cooperative/: executor.rs  keyboard.rs  simple_executor.rs  task.rs
src/heap/: linked_list_allocator.rs  slab.rs  stack.rs
src/interrupts/: handlers.rs
tests/: alloc.rs  basic_boot.rs  double_fault.rs  exception_breakpoint.rs  panic.rs  problematic_alloc.rs  should_panic.rs  test-basic-boot.rs  test-double-fault.rs  test-exception-breakpoint.rs  test-panic.rs
