[package]
name = "rustos"
version = "0.1.0"
authors = ["mandragore <gkonstandinos@gmail.com>"]
edition = "2018"

[features]
recursive_page_table = ["bootloader/recursive_page_table"]
#map_physical_memory = ["bootloader/map_physical_memory"]
x86 = []


[dependencies]
pic8259_simple = "0.1.1"
bootloader = {version = "0.9.0", features = ["map_physical_memory"]}
uart_16550 = "0.2.4"
volatile = "0.2.6"
x86_64 = "0.9.6"
spin = "0.4.9"
linked_list_allocator = "0.8.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-rustos.json"
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false


[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]
